got the intial data change working

--- a/template.html
+++ b/template.html
@@ -13,8 +13,10 @@
       <h1>Chart 1</h1>
       <button onclick="updateChartA()">Data 1</button>
       <button onclick="updateChartB()">Data 2</button>
+      <!--
       <button onclick="updateChartC()">Data 3</button>
       <button onclick="updateChartD()">Data 4</button>
+    -->
 
       <div id="chart1"></div>
 
@@ -32,18 +34,18 @@
             'name' : 'label',
             'value' : 'value'
             },
-          'colorRange' : [d3.rgb(240, 150, 60), d3.rgb(70, 180, 190), d3.rgb(100, 20, 30), d3.rgb(40, 150, 60), d3.rgb(70, 180, 190), d3.rgb(140, 150, 60), d3.rgb(40, 150, 160), d3.rgb(240, 150, 60)]
+          'colorRange' : [d3.rgb(240, 150, 60), d3.rgb(70, 180, 190), d3.rgb(100, 20, 30), d3.rgb(40, 150, 60), d3.rgb(70, 180, 190), d3.rgb(140, 150, 60), d3.rgb(40, 150, 160), d3.rgb(120, 100, 60)]
         });
         
-        /*
+        
         function updateChartA() {
-          d3.force(chart1, "updateData", "flare4.json");
+          d3.pie(chart1, "updateData", "data.json");
         };
 
         function updateChartB() {
-          d3.force(chart1, "updateData", "flare3.json");
+          d3.pie(chart1, "updateData", "data2.json");
         };
-
+        /*
         function updateChartC() {
           d3.force(chart1, "updateData", "flare2.json");
         };
