--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Pack Chart</title>
+    <title>Pie Chart</title>
     <script type="text/javascript" src="d3.v3.min.js"></script>
     <script type="text/javascript" src="pie.js"></script>
     <link rel="stylesheet" href="style.css" />
