--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Pie Chart</title>
     <script type="text/javascript" src="d3.v3.min.js"></script>
-    <script type="text/javascript" src="pie-deep.js"></script>
+    <script type="text/javascript" src="pie.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
