--- a/template.html
+++ b/template.html
@@ -20,9 +20,9 @@
       <script type="text/javascript">
         var chart1 = document.getElementById("chart1");
         d3.pie(chart1, {
-          'diameter': 800,
-          'width' : 500,
-          'height' : 500,
+          'radius': 300,
+          'width' : 700,
+          'height' : 700,
           'padding': 1,
           'dataUrl' : 'data.json',
           'dataType' : 'json',
@@ -59,7 +59,7 @@
       <script type="text/javascript">
         var chart2 = document.getElementById("chart2");
         d3.pie(chart2, {
-          'diameter': 800,
+          'radius': 200,
           'width' : 500,
           'height' : 500,
           'padding': 1,
