added tooltip and legend options

--- a/template.html
+++ b/template.html
@@ -72,7 +72,10 @@
             'value' : 'size',
             'children' : 'group'
           },
-          'chartName' : 'Multi-Layer Chart'
+          'chartName' : 'Multi-Layer Chart',
+          'tooltip' : {
+            'id' : 'tooltip2'
+          }
         });
         
         
